feat : navbar scroll

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.background-image {
+
+  background-image: url('coffee-machine1.jpg');
+  width: 100%;
+  position: fixed ;
+  top: 0;
+  right: 0;
+  left: 0;
+}
