--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,14 +22,35 @@
   </head>
 
   <body>
-
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <%= render "layouts/navbar" %>
+    <%= render 'layouts/flash' %>
 
     <%= yield %>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <script>
+    $(document).ready(function() {
+
+
+  $(window).scroll(function() {    
+      var scroll = $(window).scrollTop();
+  
+       //>=, not <=
+      if (scroll >= 60) {
+          //clearHeader, not clearheader - caps H
+          $(".navbar").addClass("bg-light");
+          $(".navbar").removeClass("navbar-transparent");
+      } else {
+        $(".navbar").removeClass("bg-light");
+          $(".navbar").addClass("navbar-transparent");
+      }
+  }); //missing;
+  
+  // document ready  
+  });
+    </script>
   </body>
 </html>
