feat : new pic / css

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -4,7 +4,7 @@
 
 .background-image {
 
-  background-image: url('coffee-machine1.jpg');
+  background-image: url('coffee-machine1.png');
   width: 100%;
   position: fixed ;
   top: 0;
