--- a/app/views/admin/_panel.html.erb
+++ b/app/views/admin/_panel.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center mt-5"> Connected ! </h1>
+<h1 class="text-center mt-5"> Bienvenue <%= current_user.nickname %> ! </h1>
 <div class="text-center">
   <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
 </div>
