--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -24,7 +24,7 @@
         </div>
         <div class="row">
           <div class="col-md-4 ml-auto mr-auto text-center">
-            <button class="btn btn-primary btn-raised">
+            <button class="btn btn-success btn-raised">
               Send Message
             </button>
           </div>
