--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -54,7 +54,7 @@
     </div>
 
 
-    <!-- Carousel Card -->
+    <!-- Map Card -->
       <div class="row">
         <div class="col-md-8 mr-auto ml-auto">
           <h2 class="title text-center" id="actuality">Actualités</h2>
@@ -67,7 +67,7 @@
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="coffee-machine1.jpg" alt="First slide">
+                  <img class="d-block w-100" src="coffee-machine1.png" alt="First slide">
                   <div class="carousel-caption d-none d-md-block">
                     <h4>
                       Formation Dépannage</br>
