--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-transparent fixed-top navbar-expand-lg">
+<nav class="navbar bg-light fixed-top navbar-expand-lg">
   <div class="container">
     <div class="navbar-translate">
       <%= link_to "Coffee Break", root_path, class: "navbar-brand" %>
