footer / action mailer / coordonnées

--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -18,8 +18,7 @@
         ©
         <script>
           document.write(new Date().getFullYear())
-        </script>, made with <i class="material-icons">favorite</i> by
-        <a href="https://github.com/ZeddBox" target="_blank">ZedDv</a>.
+        </script>, créé par <a href="https://github.com/ZeddBox" target="_blank">ZedDv</a>.
       </div>
     </div>
   </footer>
