--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -110,7 +110,7 @@
     <!-- End Carousel Card -->
 
     <!-- Contact Form -->
-    <%= render 'form' %>
+    <%= render 'contact/form' %>
   </div>
 </div>
 
