--- a/app/views/contact/_form.html.erb
+++ b/app/views/contact/_form.html.erb
@@ -1,9 +1,9 @@
-<div class="section section-contacts">
-  <h2 class="text-center title" id="contact">Contactez moi</h2>
-  <h4 class="text-center description">Si vous souhaitez plus de renseignements n'hésitez pas à me contacter. Voici mes coordonnées ou vous pouvez me laisser un message via ce site et je vous répondrai dans les plus brefs délais</h4>
-  <div class="row mt-3 mx-4">
-    <div class="col-md-3 text-center ml-auto mr-auto border shadow-sm mb-4 bg-light rounded">
-      <h5 class="mt-5">Mes coordonnées</h5>
+<div class="section">
+  <h2 class="text-center subtitle" id="contact">Contactez moi</h2>
+  <h5 class="text-center description">Si vous souhaitez plus de renseignements n'hésitez pas à me contacter. Voici mes coordonnées ou vous pouvez me laisser un message via ce site et je vous répondrai dans les plus brefs délais</h5>
+  <div class="row mt-5 mx-4">
+    <div class="col-md-4 text-center ml-auto mr-auto border shadow-sm mb-4 bg-light rounded card-info">
+      <h5 class="mt-4">Mes coordonnées</h5>
       <i class="fas fa-user-circle mt-4"></i>
       <p>Raphaël Guinhut</p>
       <i class="fas fa-mobile-alt mt-2"></i>
