--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,13 @@
-<div class="page-header header-filter background-image" data-parallax="true">
+<div class="page-header header-filter background-image gradient" data-parallax="true">
   <div class="container">
-    <div class="row">
-      <div class="col-md-8 ml-auto mr-auto">
-        <div class="brand text-center">
-          <h1>COFFEE BREAK</h1>
-          <h3 class="title text-center">Expert du café au service de la qualité</h3>
+    <div class="row mb-5">
+      <div class="col-md-12 text-center mb-5">
+        <div class="brand brand-title">
+          <div class="logo d-flex flex-row justify-content-center">
+            <%= image_tag 'https://res.cloudinary.com/coffeebreak-pro/image/upload/c_scale,w_150/v1600896950/Coffee_Break_Logo_White_-_NoTitle_f1vllu.png', class: "p-2"%>
+            <h1 class="title website-title p-2">COFFEE BREAK</h1>
+          </div>
+          <h3 class="website-subtitle">Maintenance & Entretien de machine à café professionnelle </h3>
         </div>
       </div>
     </div>
@@ -16,7 +19,7 @@
     <div class="section text-center">
       <div class="row">
         <div class="col-md-8 ml-auto mr-auto" id="services">
-          <h2 class="title">Mes services</h2>
+          <h2 class="subtitle">Mes services</h2>
           <h5 class="description">This is the paragraph where you can write more details about your product. Keep you user engaged by providing meaningful information. Remember that by this time, the user is curious, otherwise he wouldn't scroll to get here. Add a button if you want the user to see more.</h5>
         </div>
       </div>
@@ -27,7 +30,7 @@
               <div class="icon icon-info">
                 <i class="material-icons">chat</i>
               </div>
-              <h4 class="info-title">Free Chat</h4>
+              <h4 class="subtitle mt-3">Free Chat</h4>
               <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p>
             </div>
           </div>
@@ -36,7 +39,7 @@
               <div class="icon icon-success">
                 <i class="material-icons">verified_user</i>
               </div>
-              <h4 class="info-title">Verified Users</h4>
+              <h4 class="subtitle mt-3">Verified Users</h4>
               <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p>
             </div>
           </div>
@@ -45,7 +48,7 @@
               <div class="icon icon-danger">
                 <i class="material-icons">handyman</i>
               </div>
-              <h4 class="info-title">Fingerprint</h4>
+              <h4 class="subtitle mt-3">Fingerprint</h4>
               <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p>
             </div>
           </div>
@@ -55,59 +58,7 @@
 
 
     <!-- Map Card -->
-      <div class="row">
-        <div class="col-md-8 mr-auto ml-auto">
-          <h2 class="title text-center" id="actuality">Actualités</h2>
-          <div class="card card-raised card-carousel" >
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="3000">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class=""></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1" class=""></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2" class="active"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="coffee-machine1.png" alt="First slide">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h4>
-                      Formation Dépannage</br>
-                      <i class="material-icons">calendar_today</i>
-                      Le 10.09.20
-                    </h4>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="bg3.jpg" alt="Second slide">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h4>
-                      <i class="material-icons">calendar_today</i>
-                      Le 08.09.20
-                    </h4>
-                  </div>
-                </div>
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="bg.jpg" alt="Third slide">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h4>
-                      <i class="material-icons">calendar_today</i>
-                      Le 02.09.20
-                    </h4>
-                  </div>
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <i class="material-icons">keyboard_arrow_left</i>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <i class="material-icons">keyboard_arrow_right</i>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    <!-- End Carousel Card -->
+    <%= render 'map' %>
 
     <!-- Contact Form -->
     <%= render 'contact/form' %>
