--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,9 @@
-<nav class="navbar bg-light fixed-top navbar-expand-lg">
+<nav class="navbar bg-light fixed-top navbar-expand-lg navbarhidden navbarvisuallyhidden" >
   <div class="container">
-    <div class="navbar-translate">
-      <%= link_to "Coffee Break", root_path, class: "navbar-brand" %>
+    <div class="navbar-translate d-flex justify-content-center align-items-center" style="display: flex; align-items:center;">
+      <a href="/" class="logo-nav logo-img navbar-brand mb-3 logo-nav" style="display: none; height: 60px;">
+         <img alt="Logo" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/c_scale,w_60/v1600897750/tasse_-noTitle_xb2dln.png">
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="sr-only">Toggle navigation</span>
         <span class="navbar-toggler-icon"></span>
@@ -10,12 +12,17 @@
       </button>
     </div>
     <div class="collapse navbar-collapse">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a href="#services" class="nav-link-title website-title">COFFEE BREAK</a>
+        </li>
+      </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a href="#services" class="nav-link">Services</a>
+          <a href="#services" class="nav-link">Accueil</a>
         </li>
         <li class="nav-item">
-          <a href="#actuality" class="nav-link">Actualités</a>
+          <a href="#actuality" class="nav-link">A propos de moi</a>
         </li>
         <li class="nav-item">
           <a href="#contact" class="nav-link">Contact</a>
@@ -24,3 +31,5 @@
     </div>
   </div>
 </nav>
+
+
