feat : hover.css

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -75,3 +75,11 @@
 .logo-nav:hover {
   animation: bounce 0.7s ease infinite;
 }
+
+.nav-link-title{
+  padding-top: 0.9375rem;
+  padding-bottom: 0.9375rem;
+  padding-right: 0.9375rem;
+  font-size: 24px !important;
+  color: #522f1f !important;
+}
