--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar bg-light fixed-top navbar-expand-lg navbarhidden navbarvisuallyhidden" >
   <div class="container">
     <div class="navbar-translate d-flex justify-content-center align-items-center" style="display: flex; align-items:center;">
-      <a href="/" class="logo-nav logo-img navbar-brand mb-3 logo-nav" style="display: none; height: 60px;">
+      <a href="/" class="logo-nav logo-img navbar-brand mb-3 logo-nav hvr-wobble-vertical" style="display: none; height: 60px;">
          <img alt="Logo" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/c_scale,w_60/v1600897750/tasse_-noTitle_xb2dln.png">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,18 +14,18 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a href="#services" class="nav-link-title website-title">COFFEE BREAK</a>
+          <a href="/" class="nav-link nav-link-title website-title hvr-underline-from-left">COFFEE BREAK</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a href="#services" class="nav-link">Accueil</a>
+          <a href="#services" class="nav-link hvr-underline-from-right">Accueil</a>
         </li>
         <li class="nav-item">
-          <a href="#actuality" class="nav-link">A propos de moi</a>
+          <a href="#actuality" class="nav-link hvr-underline-from-right">A propos de moi</a>
         </li>
         <li class="nav-item">
-          <a href="#contact" class="nav-link">Contact</a>
+          <a href="#contact" class="nav-link hvr-underline-from-right">Contact</a>
         </li>
       </ul>
     </div>
