--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,9 +3,9 @@
     <div class="row mb-5">
       <div class="col-md-12 text-center mb-5">
         <div class="brand brand-title">
-          <div class="logo d-flex flex-row justify-content-center">
-            <%= image_tag 'https://res.cloudinary.com/coffeebreak-pro/image/upload/c_scale,w_150/v1600896950/Coffee_Break_Logo_White_-_NoTitle_f1vllu.png', class: "p-2"%>
-            <h1 class="title website-title p-2">COFFEE BREAK</h1>
+          <div class="logo">
+            <%= image_tag 'https://res.cloudinary.com/coffeebreak-pro/image/upload/c_scale,w_150/v1600907495/Coffee_Break_Logo_White_-_NoTitle2_cuqgr2.png', class: "vcenter"%>
+            <h1 class="title website-title vcenter">COFFEE BREAK</h1>
           </div>
           <h3 class="website-subtitle">Maintenance & Entretien de machine à café professionnelle </h3>
         </div>
