--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -22,7 +22,7 @@
           <a href="#services" class="nav-link hvr-underline-from-right">Accueil</a>
         </li>
         <li class="nav-item">
-          <a href="#actuality" class="nav-link hvr-underline-from-right">A propos de moi</a>
+          <a href="/a-propos-de-moi" class="nav-link hvr-underline-from-right">A propos de moi</a>
         </li>
         <li class="nav-item">
           <a href="#contact" class="nav-link hvr-underline-from-right">Contact</a>
