--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,16 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     
     <script>
+    if(window.location.href.indexOf("propos") != -1) {
+        $(".navbar").addClass("bg-light");
+        $(".navbar").removeClass("navbar-transparent");
+        $(".navbar").removeClass("navbarhidden");
+        setTimeout(function () {
+          $(".navbar").removeClass('navbarvisuallyhidden');
+        }, 20);
+        $(".navbar-brand").css("display", "");
+    }
+    else {
       $(document).ready(function() {
 
 
@@ -72,6 +82,8 @@
 
       // document ready  
       });
+    }
+    
 </script>
 
   </body>
