--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,7 +19,7 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a href="#services" class="nav-link hvr-underline-from-right">Accueil</a>
+          <a href="/" class="nav-link hvr-underline-from-right">Accueil</a>
         </li>
         <li class="nav-item">
           <a href="/a-propos-de-moi" class="nav-link hvr-underline-from-right">A propos de moi</a>
