--- a/app/views/contact_mailer/contact_admin.html.erb
+++ b/app/views/contact_mailer/contact_admin.html.erb
@@ -5,8 +5,10 @@
   </head>
   <body>
     <h1>Nouveau message venant du site CoffeeBreak.pro</h1>
-    <p>Adresse mail : <b><%= @email %></b>.</p>
     <p>Nom : <b><%= @name %></b>.</p>
+    <p>Entreprise : <b><%= @company %></b>.</p>
+    <p>Adresse mail : <b><%= @email %></b>.</p>
+    <p>Numéro de téléphone : <b><%= @number %></b>.</p>
     <p>Message : <b><%= @message %></b>.</p>
 
     <hr>
