--- a/app/views/contact_mailer/contact_admin.txt.erb
+++ b/app/views/contact_mailer/contact_admin.txt.erb
@@ -2,6 +2,8 @@ Nouveau message sur le site CoffeeBreak.pro
 ==========================================================
  
 Message de <%= @name %>
+Entreprise : <%= @company %>
 Adresse mail : <%= @email %>
+Number : <%= @number %>
 Message : 
 <%= @message %>
