--- a/app/views/contact_mailer/contact_user.txt.erb
+++ b/app/views/contact_mailer/contact_user.txt.erb
@@ -5,6 +5,7 @@ Nous avons bien reçu votre message, vous serez contacté très bientôt !
 
 Message de <%= @name %>
 Adresse mail : <%= @email %>
+Number : <%= @number %>
 Message : 
 <%= @message %>
 
