--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,8 +1,8 @@
-<nav class="navbar bg-light fixed-top navbar-expand-lg navbarhidden navbarvisuallyhidden" >
+<nav class="navbar bg-light fixed-top navbar-expand-lg navbarhidden navbarvisuallyhidden coffee-bag-bg" >
   <div class="container">
     <div class="navbar-translate d-flex justify-content-center align-items-center" style="display: flex; align-items:center;">
       <a href="/" class="logo-nav logo-img navbar-brand mb-3 logo-nav hvr-wobble-vertical" style="display: none; height: 60px;">
-         <img alt="Logo" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/c_scale,w_60/v1600897750/tasse_-noTitle_xb2dln.png">
+         <img alt="Logo" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/c_scale,w_60/v1600978568/logo_sans_fond_b9ttq6.png">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="sr-only">Toggle navigation</span>
@@ -25,7 +25,7 @@
           <a href="/a-propos-de-moi" class="nav-link hvr-underline-from-right">A propos de moi</a>
         </li>
         <li class="nav-item">
-          <a href="#contact" class="nav-link hvr-underline-from-right">Contact</a>
+          <a href="/#contact" class="nav-link hvr-underline-from-right">Contact</a>
         </li>
       </ul>
     </div>
