--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -106,3 +106,10 @@
   float: none;
   max-width: 49%;
 }
+
+.coffee-bag-bg {
+  background-image: url('https://res.cloudinary.com/coffeebreak-pro/image/upload/v1600980102/coffee-bag-bg-white3_ivnog3.jpg');
+  // background-image: url('https://res.cloudinary.com/coffeebreak-pro/image/upload/v1600979804/coffee-bag-bg-white2_oj58ou.jpg');
+  // background-image: url('https://res.cloudinary.com/coffeebreak-pro/image/upload/v1600980537/coffee-bag-bg2-beige2_fomzap.jpg');
+  // background-image: url('https://res.cloudinary.com/coffeebreak-pro/image/upload/v1600984571/coffee-bag-bg3-beige2_nk3iev.jpg');
+}
