--- a/app/views/contact/_flash.html.erb
+++ b/app/views/contact/_flash.html.erb
@@ -1,3 +1,9 @@
 <% flash.each do |message_type, message| %>
-    <%= content_tag(:div, message, class: "alert alert-#{message_type} text-center") %>
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <i class="fas fa-paper-plane"></i> <%= message %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 <% end %>
+
