--- a/app/views/contact_mailer/contact_user.html.erb
+++ b/app/views/contact_mailer/contact_user.html.erb
@@ -8,8 +8,10 @@
 
     <p>Nous avons bien reçu votre message, vous serez contacté très bientôt !</p>
 
-    <p>Adresse mail : <b><%= @email %></b>.</p>
     <p>Nom : <b><%= @name %></b>.</p>
+    <p>Entreprise : <b><%= @company %></b>.</p>
+    <p>Adresse mail : <b><%= @email %></b>.</p>
+    <p>Numéro de téléphone : <b><%= @number %></b>.</p>
     <p>Message : <b><%= @message %></b>.</p>
 
     <hr>
