--- a/app/views/home/_map.html.erb
+++ b/app/views/home/_map.html.erb
@@ -1,5 +1,5 @@
 <div class="section">
-  <h2 class="subtitle text-center" id="actuality">Ma zone géographique</h2>
+  <h2 class="subtitle text-center" id="actuality">Zones d'interventions</h2>
   <div class="row mt-5">
     <div class="col-md-4 mr-auto ml-auto">
       <div id="mapid" class="rounded">
@@ -8,7 +8,7 @@
     </div>
     <div class="col-md-1">
     </div>
-    <div class="col-md-4 text-center ml-auto mr-auto border shadow-sm mb-4 bg-light rounded card-info">
+    <div class="col-md-4 text-center ml-auto mr-auto border shadow-sm mb-4 bg-light rounded card-info coffee-bag-bg">
       <h5 class="mt-4">Je me déplace en </h5>
       <i class="fas fa-wine-glass-alt"></i><p>Gironde</p>
       <i class="fas fa-tree mt-2"></i><p>Charente</p>
