--- a/app/assets/stylesheets/material/material-kit.css
+++ b/app/assets/stylesheets/material/material-kit.css
@@ -15242,7 +15242,7 @@ textarea {
 
 .nav-pills .nav-item .nav-link.active {
   color: #ffffff;
-  background-color: #9c27b0;
+  background-color: #3e2216;
   box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.2), 0 13px 24px -11px rgba(156, 39, 176, 0.6);
 }
 
