--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -19,22 +19,24 @@
         <div class="description text-center">
           <p>De formation commerciale, j'ai créé cette entreprise pour : dniafnaieoczienvioqevio</p>
         </div>
+
+      <div id="accordion">
         <div class="row">
           <div class="col-md-6 ml-auto mr-auto">
             <div class="profile-tabs">
               <ul class="nav nav-pills nav-pills-icons justify-content-center" role="tablist">
-                <li class="nav-item">
-                  <a class="nav-link" href="#studio" role="tab" data-toggle="tab" aria-selected="false">
+                <li class="nav-item" id="headingOne">
+                  <a class="nav-link active" href="#collapseOne" role="tab" data-toggle="tab" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                     <i class="material-icons">camera</i> Mes Expériences
                   </a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link active show" href="#works" role="tab" data-toggle="tab" aria-selected="true">
+                <li class="nav-item" id="headingTwo">
+                  <a class="nav-link collapsed" href="#collapseTwo" role="tab" data-toggle="tab" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                     <i class="material-icons">palette</i> Mes Formations
                   </a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#favorite" role="tab" data-toggle="tab" aria-selected="false">
+                <li class="nav-item" id="headingThree">
+                  <a class="nav-link collapsed" href="#collapseThree" role="tab" data-toggle="tab" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                     <i class="material-icons">favorite</i> Pourquoi CoffeeBreak ?
                   </a>
                 </li>
@@ -43,8 +45,8 @@
           </div>
         </div>
        
-        <div class="tab-content tab-space">
-          <div class="tab-pane text-center gallery" id="studio">
+        <div class="tab-content tab-space" id="accordion">
+          <div class="text-center collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordion">
             <div class="row">
               <div class="col-md-5 ml-auto mr-auto">
                 <div class="card card-profile card-plain">
@@ -129,33 +131,18 @@
                 </div>
               </div>
             </div>
-
-
-            </div>
           </div>
-          <div class="tab-pane text-center gallery active show" id="works">
+          <div class="text-center collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#accordion">
             <div class="row">
               <div class="col-md-3 ml-auto">
-                <img src="../assets/img/examples/olu-eletu.jpg" class="rounded">
-                <img src="../assets/img/examples/clem-onojeghuo.jpg" class="rounded">
-                <img src="../assets/img/examples/cynthia-del-rio.jpg" class="rounded">
-              </div>
-              <div class="col-md-3 mr-auto">
-                <img src="../assets/img/examples/mariya-georgieva.jpg" class="rounded">
-                <img src="../assets/img/examples/clem-onojegaw.jpg" class="rounded">
+                <p>Formations</p>
               </div>
             </div>
           </div>
-          <div class="tab-pane text-center gallery" id="favorite">
+          <div class="text-center collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordion">
             <div class="row">
               <div class="col-md-3 ml-auto">
-                <img src="../assets/img/examples/mariya-georgieva.jpg" class="rounded">
-                <img src="../assets/img/examples/studio-3.jpg" class="rounded">
-              </div>
-              <div class="col-md-3 mr-auto">
-                <img src="../assets/img/examples/clem-onojeghuo.jpg" class="rounded">
-                <img src="../assets/img/examples/olu-eletu.jpg" class="rounded">
-                <img src="../assets/img/examples/studio-1.jpg" class="rounded">
+                <p>Pourquoi</p>
               </div>
             </div>
           </div>
@@ -163,120 +150,8 @@
       </div>
     </div>
   </div>
+  </div>
+
   <%= render 'footer' %>
 
-<script src="../assets/js/material-kit.min.js?v=2.0.7" type="text/javascript"></script>
-<style>
-
-  #count-down {
-    display: initial;
-    padding-left: 10px;
-    font-weight: bold;
-  }
-  #close-bar {
-    font-size: 22px;
-    color: #3e3947;
-    margin-right: 0;
-    position: absolute;
-    right: 5%;
-    background: white;
-    opacity: 0.5;
-    padding: 0px;
-    height: 25px;
-    line-height: 21px;
-    width: 25px;
-    border-radius: 50%;
-    text-align: center;
-    top: 18px;
-    cursor: pointer;
-    z-index: 9999999999;
-    font-weight: 200;
-  }
-  #close-bar:hover{
-    opacity: 1;
-  }
-  #btn-bar {
-    background-color: #fff;
-    color: #40312d;
-    border-radius: 4px;
-    padding: 10px 20px;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 12px;
-    opacity: .95;
-    margin-left: 15px;
-    top: 0px;
-    position: relative;
-    cursor: pointer;
-    text-align: center;
-    box-shadow: 0 5px 10px -3px rgba(0,0,0,.23), 0 6px 10px -5px rgba(0,0,0,.25);
-  }
-  #btn-bar:hover{
-    opacity: 0.9;
-  }
-  #btn-bar{
-    opacity: 1;
-  }
-
-  #btn-bar span {
-    color: red;
-  }
-  .right-side{
-    float: right;
-    margin-right: 60px;
-    top: -6px;
-    position: relative;
-    display: block;
-  }
-
-  #oldPriceBar {
-    text-decoration: line-through;
-    font-size: 16px;
-    color: #fff;
-    font-weight: 400;
-    top: 2px;
-    position: relative;
-  }
-  #newPrice{
-    color: #fff;
-    font-size: 19px;
-    font-weight: 700;
-    top: 2px;
-    position: relative;
-    margin-left: 7px;
-  }
-
-  #fromText {
-    font-size: 15px;
-    color: #fff;
-    font-weight: 400;
-    margin-right: 3px;
-    top: 0px;
-    position: relative;
-  }
-
-  @media(max-width: 991px){
-    .right-side{
-      float:none;
-      margin-right: 0px;
-      margin-top: 5px;
-      top: 0px
-    }
-    #ofBar {
-      padding: 50px 20px 20px;
-      text-align: center;
-    }
-    #btn-bar{
-      display: block;
-      margin-top: 10px;
-      margin-left: 0;
-    }
-  }
-  @media (max-width: 768px) {
-    #count-down {
-      display: block;
-      font-size: 25px;
-    }
-  }
-</style>
 </body>
