--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,7 @@
       <div class="row">
         <div class="col-md-8 ml-auto mr-auto" id="services">
           <h2 class="subtitle">Mes services</h2>
-          <h5 class="description">This is the paragraph where you can write more details about your product. Keep you user engaged by providing meaningful information. Remember that by this time, the user is curious, otherwise he wouldn't scroll to get here. Add a button if you want the user to see more.</h5>
+          <h5 class="description">Je mets mes compétences techniques et cafés au service de votre machine professionelle. Je peux intervenir pour :</h5>
         </div>
       </div>
       <div class="features">
@@ -28,28 +28,28 @@
           <div class="col-md-4">
             <div class="info">
               <div class="icon icon-info">
-                <i class="material-icons">chat</i>
+                <i class="material-icons">local_cafe</i>
               </div>
-              <h4 class="subtitle mt-3">Free Chat</h4>
-              <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p>
+              <h4 class="subtitle mt-3">Des soucis d'extractions</h4>
+              <p>Café sous/sur-extrait</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="info">
               <div class="icon icon-success">
-                <i class="material-icons">verified_user</i>
+                <i class="material-icons">build</i>
               </div>
-              <h4 class="subtitle mt-3">Verified Users</h4>
-              <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p>
+              <h4 class="subtitle mt-3">De l'entretien courant</h4>
+              <p>Joins, douchettes, adoucisseurs, groupes bouchés, réglage moulin...</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="info">
               <div class="icon icon-danger">
-                <i class="material-icons">handyman</i>
+                <i class="material-icons">shopping_cart</i>
               </div>
-              <h4 class="subtitle mt-3">Fingerprint</h4>
-              <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p>
+              <h4 class="subtitle mt-3">Des besoins matériels</h4>
+              <p>Machines à café, moulins, machines à glaçons, laves verres...</p>
             </div>
           </div>
         </div>
