--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,7 @@
       <div class="row">
         <div class="col-md-8 ml-auto mr-auto" id="services">
           <h2 class="subtitle">Mes services</h2>
-          <h5 class="description">Je mets mes compétences techniques et cafés au service de votre machine professionelle. Je peux intervenir pour :</h5>
+          <h5 class="description">Je mets mes compétences techniques et cafés au service de votre machine professionnelle. Je peux intervenir pour :</h5>
         </div>
       </div>
       <div class="features">
