--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Righteous&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Francois+One&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" %>
+    <!-- favicon -->
+    <%= favicon_link_tag asset_path("https://res.cloudinary.com/coffeebreak-pro/image/upload/v1600907495/Coffee_Break_Logo_White_-_NoTitle2_cuqgr2.png") %>
 
   </head>
 
