--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -10,10 +10,7 @@
         </ul>
       </nav>
       <div class="copyright float-right">
-        ©
-        <script>
-          document.write(new Date().getFullYear())
-        </script>, créé par <a href="https://github.com/ZeddBox" target="_blank">ZedDv</a>.
+        © <%= Date.today.year %>, créé par <a href="https://github.com/ZeddBox" target="_blank">ZedDv</a>.
       </div>
     </div>
   </footer>
