--- a/app/views/home/_map.html.erb
+++ b/app/views/home/_map.html.erb
@@ -6,7 +6,7 @@
         <%= image_tag 'https://res.cloudinary.com/coffeebreak-pro/image/upload/v1601027236/map-with-dep_hgskhj.png' %>
       </div>
     </div>
-    <div class="col-md-1">
+    <div class="col-md-1 py-3">
     </div>
     <div class="col-md-4 text-center ml-auto mr-auto border shadow-sm mb-4 bg-light rounded card-info coffee-bag-bg">
       <h5 class="mt-4">Je me déplace en </h5>
