--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -11,13 +11,14 @@
               </div>
               <div class="name">
                 <h3 class="title">Raphael Guinhut</h3>
-                <a href="#pablo" class="btn btn-just-icon btn-link"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/raphael-guinhut/" class="btn btn-just-icon btn-link hvr-push"><i class="fab fa-linkedin"></i></a>
               </div>
             </div>
           </div>
         </div>
-        <div class="description text-center">
-          <p>De formation commerciale, j'ai créé cette entreprise pour : dniafnaieoczienvioqevio</p>
+        <div class="description text-center block">
+          <p>De formation supérieure, commerciale et polyvalente, je me suis principalement orienté vers des postes de technico-commercial. J'ai ainsi été sédentaire ou itinérant avec une clientèle principalement B to B.<br/>
+          Aujourd'hui je mets mes compétences acquises dans la maintenance et la réparation de machine à café à votre service !</p>
         </div>
 
       <div id="accordion">
@@ -45,8 +46,8 @@
           </div>
         </div>
        
-        <div class="tab-content tab-space" id="accordion">
-          <div class="text-center collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordion">
+        <div class="tab-content tab-space">
+          <div class="tab-pane active text-center collapse" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordion">
             <div class="row">
               <div class="col-md-5 ml-auto mr-auto">
                 <div class="card card-profile card-plain">
@@ -132,14 +133,73 @@
               </div>
             </div>
           </div>
-          <div class="text-center collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#accordion">
+          <div class="tab-pane text-center collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#accordion">
             <div class="row">
-              <div class="col-md-3 ml-auto">
-                <p>Formations</p>
+              <div class="col-md-5 ml-auto mr-auto">
+                <div class="card card-profile card-plain">
+                  <div class="row">
+                    <div class="col-md-5">
+                      <div class="card-header card-header-image">
+                        <img class="img mx-auto my-auto d-block" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/v1601472075/idrac_otykrg.png">
+                    </div>
+                    </div>
+                    <div class="col-md-7">
+                      <div class="card-body">
+                        <h4 class="card-title">IDRAC Business School</h4>
+                        <h6 class="card-category text-muted">Master 2 (M2) - Marketing et Négociation</h6>
+                        <p class="card-description">
+                          2015 - 2016
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-5 mr-auto ml-auto">
+                <div class="card card-profile card-plain">
+                  <div class="row">
+                    <div class="col-md-5">
+                      <div class="card-header card-header-image">
+                        <img class="img mx-auto my-auto d-block" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/v1601472075/idrac_otykrg.png">
+                    </div>
+                    </div>
+                    <div class="col-md-7">
+                      <div class="card-body">
+                        <h4 class="card-title">IDRAC Business School</h4>
+                        <h6 class="card-category text-muted">Master 1 - Marketing et Négociation</h6>
+                        <p class="card-description">
+                          2014 - 2015
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-5 ml-auto mr-auto">
+                <div class="card card-profile card-plain">
+                  <div class="row">
+                    <div class="col-md-5">
+                      <div class="card-header card-header-image">
+                        <img class="img mx-auto my-auto d-block" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/v1601472076/ifag_rsgjfd.jpg">
+                    </div>
+                    </div>
+                    <div class="col-md-7">
+                      <div class="card-body">
+                        <h4 class="card-title">IFAG </h4>
+                        <h6 class="card-category text-muted">Bachelor Management et Entreprenariat - Management de projet</h6>
+                        <p class="card-description">
+                          2013 – 2014
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-          <div class="text-center collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordion">
+          <div class="tab-pane text-center collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordion">
             <div class="row">
               <div class="col-md-3 ml-auto">
                 <p>Pourquoi</p>
