--- a/app/assets/stylesheets/material/material-kit.css
+++ b/app/assets/stylesheets/material/material-kit.css
@@ -9852,11 +9852,22 @@ button:focus {
   border-color: #62CB77;
   box-shadow: 0 2px 2px 0 rgba(76, 175, 80, 0.14), 0 3px 1px -2px rgba(76, 175, 80, 0.2), 0 1px 5px 0 rgba(76, 175, 80, 0.12);
 }
+.btn.btn-success.btn-brown {
+  color: #fff;
+  background-color: #522f1f;
+  border-color: #422619;
+  box-shadow: 0 2px 2px 0 rgba(66, 38, 25, 0.14), 0 3px 1px -2px rgba(66, 38, 25, 0.14), 0 1px 5px 0 rgba(66, 38, 25, 0.14);
+}
 
 .btn.btn-success:hover {
   color: #fff;
   background-color: #47a44b;
   border-color: #39843c;
+}
+.btn.btn-success.btn-brown:hover {
+  color: #fff;
+  background-color: #3f2417;
+  border-color: #3f2417;
 }
 
 .btn.btn-success:focus,
@@ -9921,6 +9932,11 @@ button:focus {
 .btn.btn-success:active,
 .btn.btn-success:hover {
   box-shadow: 0 14px 26px -12px rgba(76, 175, 80, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(76, 175, 80, 0.2);
+}
+.btn.btn-success.btn-brown:focus,
+.btn.btn-success.btn-brown:active,
+.btn.btn-success.btn-brown:hover {
+  box-shadow: 0 2px 2px 0 rgba(66, 38, 25, 0.14), 0 3px 1px -2px rgba(66, 38, 25, 0.14), 0 1px 5px 0 rgba(66, 38, 25, 0.14);
 }
 
 .btn.btn-success.btn-link {
@@ -15243,7 +15259,7 @@ textarea {
 .nav-pills .nav-item .nav-link.active {
   color: #ffffff;
   background-color: #3e2216;
-  box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.2), 0 13px 24px -11px rgba(156, 39, 176, 0.6);
+  box-shadow: 0 2px 2px 0 rgba(66, 38, 25, 0.14), 0 3px 1px -2px rgba(66, 38, 25, 0.14), 0 1px 5px 0 rgba(66, 38, 25, 0.14);
 }
 
 .nav-pills .nav-item i {
@@ -15303,7 +15319,7 @@ textarea {
 .info {
   max-width: 360px;
   margin: 0 auto;
-  padding: 70px 0 30px;
+  padding: 30px 0 30px;
 }
 
 .info .icon {
@@ -15994,6 +16010,7 @@ h2.title {
     padding-left: 1.5rem;
   }
 }
+
 
 .dropdown-menu .dropdown-item:hover,
 .dropdown-menu .dropdown-item:focus,
@@ -18319,7 +18336,7 @@ footer .pull-center {
 
 .profile-page .description {
   margin: 1.071rem auto 0;
-  max-width: 600px;
+  max-width: 900px;
 }
 
 .profile-page .profile-tabs {
