--- a/app/views/contact/_form.html.erb
+++ b/app/views/contact/_form.html.erb
@@ -51,7 +51,7 @@
     </div>
           <div class="row col-md-12 text-center">
             <div class="col-md-6 ml-auto mr-auto text-center">
-              <%= f.submit 'Envoyer un message', class: 'btn btn-lg btn-block btn-success' %>
+              <%= f.submit 'Envoyer un message', class: 'btn btn-lg btn-block btn-success btn-brown', style: 'text-align: center; white-space:normal' %>
             </div>
           </div>
         <% end %>
