--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,46 +16,9 @@
 <div class="main main-raised">
   <div class="container">
     <!-- Services Section -->
-    <div class="section text-center">
-      <div class="row">
-        <div class="col-md-8 ml-auto mr-auto" id="services">
-          <h2 class="subtitle">Mes services</h2>
-          <h5 class="description">Je mets mes compétences techniques et cafés au service de votre machine professionnelle. Je peux intervenir pour :</h5>
-        </div>
-      </div>
-      <div class="features">
-        <div class="row">
-          <div class="col-md-4">
-            <div class="info">
-              <div class="icon icon-info">
-                <i class="material-icons">local_cafe</i>
-              </div>
-              <h4 class="subtitle mt-3">Des soucis d'extractions</h4>
-              <p>Café sous/sur-extrait</p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="info">
-              <div class="icon icon-success">
-                <i class="material-icons">build</i>
-              </div>
-              <h4 class="subtitle mt-3">De l'entretien courant</h4>
-              <p>Joins, douchettes, adoucisseurs, groupes bouchés, réglage moulin...</p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="info">
-              <div class="icon icon-danger">
-                <i class="material-icons">shopping_cart</i>
-              </div>
-              <h4 class="subtitle mt-3">Des besoins matériels</h4>
-              <p>Machines à café, moulins, machines à glaçons, laves verres...</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
+    <%= render 'services' %>
+    <!-- About me -->
+    <%= render 'about' %>
 
     <!-- Map Card -->
     <%= render 'map' %>
