--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,25 +4,15 @@
       <a href="/" class="logo-nav logo-img navbar-brand mb-3 logo-nav hvr-wobble-vertical" style="display: none; height: 60px;">
          <img alt="Logo" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/c_scale,w_60/v1600978568/logo_sans_fond_b9ttq6.png">
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="navbar-toggler-icon"></span>
-        <span class="navbar-toggler-icon"></span>
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <a href="/" class="nav-link nav-link-title website-title hvr-underline-from-left">COFFEE BREAK</a>
     </div>
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a href="/" class="nav-link nav-link-title website-title hvr-underline-from-left">COFFEE BREAK</a>
-        </li>
-      </ul>
+    <div class="collapse navbar-collapse" id="collaspe">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a href="/" class="nav-link hvr-underline-from-right">Accueil</a>
         </li>
         <li class="nav-item">
-          <a href="/a-propos-de-moi" class="nav-link hvr-underline-from-right">A propos de moi</a>
+          <a href="/#apropos" class="nav-link hvr-underline-from-right">A propos de moi</a>
         </li>
         <li class="nav-item">
           <a href="/#contact" class="nav-link hvr-underline-from-right">Contact</a>
