--- a/app/views/contact/_form.html.erb
+++ b/app/views/contact/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="section">
   <h2 class="text-center subtitle" id="contact">Contactez moi</h2>
-  <h5 class="text-center description">Vous trouverez ci-dessous mes coordonnées. Pour les tarifs et autres informations, veuillez m'adresser votre demande via ce formulaire, je reviendrai vers vous dans les meilleurs délais.</h5>
+  <h5 class="text-center description">Vous trouverez ci-dessous mes coordonnées. Tarifs et autres informations disponible via ce formulaire :</h5>
   <div class="row mt-5 mx-4">
     <div class="col-md-4 text-center ml-auto mr-auto border shadow-sm mb-4 rounded card-info coffee-bag-bg">
       <h5 class="mt-4">Mes coordonnées</h5>
