--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
             <%= image_tag 'https://res.cloudinary.com/coffeebreak-pro/image/upload/c_scale,w_150/v1600907495/Coffee_Break_Logo_White_-_NoTitle2_cuqgr2.png', class: "vcenter"%>
             <h1 class="title website-title vcenter">COFFEE BREAK</h1>
           </div>
-          <h3 class="website-subtitle">Maintenance & Entretien de machine à café professionnelle </h3>
+          <h3 class="website-subtitle">Maintenance & Entretien de machines à café professionnelles </h3>
         </div>
       </div>
     </div>
@@ -17,12 +17,10 @@
   <div class="container">
     <!-- Services Section -->
     <%= render 'services' %>
-    <!-- About me -->
-    <%= render 'about' %>
-
     <!-- Map Card -->
     <%= render 'map' %>
-
+    <!-- About me -->
+    <%= render 'about' %>
     <!-- Contact Form -->
     <%= render 'contact/form' %>
   </div>
