--- a/app/views/home/_about.html.erb
+++ b/app/views/home/_about.html.erb
@@ -13,8 +13,7 @@
   </div>
   <div class="col-md-12 ml-auto mr-auto text-center px-5">
       <h5 class="subtitle">Je m'appelle Raphael Guinhut</h5>
-      <p>De formation supérieure, commerciale et polyvalente, je me suis principalement orienté vers des postes de technico-commercial. J'ai ainsi été sédentaire ou itinérant avec une clientèle principalement B to B.<br/>
-      Aujourd'hui je mets mes compétences acquises dans la maintenance et la réparation de machine à café à votre service !</p>
-      <a href="/a-propos-de-moi" class="btn btn-lg btn-success text-center btn-brown" style="text-align: center; white-space:normal">En savoir plus sur mon parcours ou mon entreprise</a>
+      <p>De formation supérieure, commerciale et technique, j'ai décidé de créer cette entreprise après une excellente expérience dans l'entreprise Illy Café.</p>
+      <a href="/a-propos-de-moi" class="btn btn-lg btn-success text-center btn-brown" style="text-align: center; white-space:normal">En savoir plus sur mon parcours et mon entreprise</a>
   </div>
 </div>
