--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -17,8 +17,8 @@
           </div>
         </div>
         <div class="description text-center block">
-          <p>De formation supérieure, commerciale et polyvalente, je me suis principalement orienté vers des postes de technico-commercial. J'ai ainsi été sédentaire ou itinérant avec une clientèle principalement B to B.<br/>
-          Aujourd'hui je mets mes compétences acquises dans la maintenance et la réparation de machine à café à votre service !</p>
+          <p>De formation supérieure, commerciale et technique, je me suis principalement orienté vers des postes de technico-commercial. J'ai ainsi été amené à évoluer au sein d'un environnement professionnelle, puis naturellement vers le CHR. </br>
+          J'ai tout de suite été séduit par la nature de cette relation saine et constructive. C'est grâce à mon expérience dans la maison Illy café, que j'ai découvert les subtilités de réalisation et l'importance de la qualité d'un café en restauration. Je propose donc de mettre mes compétences au service de votre machine traditionnelle et de votre café.</p>
         </div>
 
       <div id="accordion">
