--- a/app/views/home/_about.html.erb
+++ b/app/views/home/_about.html.erb
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div class="col-md-12 ml-auto mr-auto text-center px-5">
-      <h5 class="subtitle">Je m'appelle Raphael Guinhut</h5>
+      <h5 class="subtitle">Je m'appelle Raphaël Guinhut</h5>
       <p>De formation supérieure, commerciale et technique, j'ai décidé de créer cette entreprise après une excellente expérience dans l'entreprise Illy Café.</p>
       <a href="/a-propos-de-moi" class="btn btn-lg btn-success text-center btn-brown" style="text-align: center; white-space:normal">En savoir plus sur mon parcours et mon entreprise</a>
   </div>
